Change semester to spring2019

--- a/node-app/src/projects/project1.html
+++ b/node-app/src/projects/project1.html
@@ -27,7 +27,7 @@
                         <li>Please register <a href="#!/grouper">your group</a>.
                         </li>
                         <li>URL to <a ng-href="https://git.cs.vt.edu/cs3214-staff/cs3214-esh">Git repository for base code</a>.</li>
-                        <li>You can try the following <a ng-href="https://courses.cs.vt.edu/~cs3214/spring2018/#!/analysis">experimental analysis tools</a> developed this semester to help you debug your shell.</li>
+                        <li>You can try the following <a ng-href="https://courses.cs.vt.edu/~cs3214/fall2018/#!/analysis">experimental analysis tools</a> developed this semester to help you debug your shell.</li>
                         <li><p>
                             <b>How to run the provided tests:</b>
                             Use the program <code>stdriver.py</code>.
@@ -612,7 +612,7 @@ the pid of the child process that caused SIGCHLD.  Why then can I not use it?">
                             However, since traditional Unix signals are not queued, si_pid for a SIGCHLD will contain
                             the pid of the first child that caused SIGCHLD to become pending.  Therefore, it cannot
                             be used to learn which children need to be reaped. You must use waitpid(-1, ...).
-                            Study <a href="/~cs3214/spring2018/gback/examples/signal/sigchlddoesnotqueue.c">sigchlddoesnotqueue.c</a>
+                            Study <a href="/~cs3214/fall2018/gback/examples/signal/sigchlddoesnotqueue.c">sigchlddoesnotqueue.c</a>
                             for an example.
                         </p>
                     </uib-accordion-group>
