Comment out help sessions

--- a/node-app/src/projects/project1.html
+++ b/node-app/src/projects/project1.html
@@ -12,22 +12,22 @@
                         <li>Help Sessions:
                             <table class="table">
                                 <tr><th>When</th><th>Where</th><th>Who</th><th>Slides</th></tr>
-                                <tr><td>Tuesday Jan 30th 7pm</td><td>331 Randolph Hall</td><td>James </td>
+                                <tr><td>Friday Feb 1st 9.05am</td><td>NCB 160</td><td> </td>
                                     <td>
-                                        <a ng-href="projects/P1HelpSessionSlides.pdf">PDF</a>
+                                        <!--<a ng-href="projects/P1HelpSessionSlides.pdf">PDF</a>-->
                                     </td>
                                 </tr>
-                                <tr><td>Thursday Feb 1st 7pm</td><td>331 Randolph Hall</td><td>Eric </td>
+                                <tr><td>Friday Feb 1st</td><td>Torg 3100</td><td> </td>
                                     <td>
-                                        <a ng-href="projects/P1HelpSessionSlides.pdf">PDF</a>
+                                        <!--<a ng-href="projects/P1HelpSessionSlides.pdf">PDF</a>-->
                                     </td>
                                 </tr>
                             </table>
                         </li>
-                        <li>Please register <a href="#!/grouper">your group</a>.
-                        </li>
+                        <!--<li>Please register <a href="#!/grouper">your group</a>.
+                        </li>-->s
                         <li>URL to <a ng-href="https://git.cs.vt.edu/cs3214-staff/cs3214-esh">Git repository for base code</a>.</li>
-                        <li>You can try the following <a ng-href="https://courses.cs.vt.edu/~cs3214/fall2018/#!/analysis">experimental analysis tools</a> developed this semester to help you debug your shell.</li>
+                        <!--<li>You can try the following <a ng-href="https://courses.cs.vt.edu/~cs3214/spring2019/#!/analysis">experimental analysis tools</a> developed this semester to help you debug your shell.</li>-->
                         <li><p>
                             <b>How to run the provided tests:</b>
                             Use the program <code>stdriver.py</code>.
